# cardio

./: Cargo.toml  README.md  rustfmt.toml
src/: checker.rs  labels.rs  lib.rs  matrix.rs  model.rs  parser.rs  poisson.rs  property.rs  python.rs  rewards.rs
