[package]
name = "cardio"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
evalexpr = "13.0.0"
itertools = "0.14.0"
logos = "0.15.1"
num = "0.4.3"
regex = "1.12.2"
sprs = "0.11.3"
vector-map = "1.0.2"
# Python binding generator so we don't have to manually create them
pyo3 = { version = "0.27", features = ["auto-initialize"] }

[lib]
name = "cardio"
crate-type = ["cdylib"]
